[package]
name = "ropus"
version = "0.1.0"
edition = "2021"
authors = ["Pol <"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# opus = "0.3.0"
anyhow = "1.0.68"

# TODO: Make tokio feature
# tokio = {version = "1.24.1", features = ["fs"]}