[package]
name = "ropus"
version = "0.1.0"
edition = "2021"
authors = ["Pol <"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"

# TODO: Make tokio feature
# tokio = {version = "1.24.1", features = ["fs"]}

[dev-dependencies]
sndfile = "0.1.1"
opus = "0.3.0"

[[example]]
name = "test"
path = "./examples/example.rs"
