[package]
name = "praw"
version = "0.1.0"
edition = "2021"
authors = ["Pol <"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"

# For features
sndfile = { version = "0.1.1", optional = true }
opus = { version = "0.3.0", optional = true }
libflac-sys = { version = "0.3.0", default_features = false, features = [
  "build-flac",
], optional = true }
# TODO: Make tokio feature
tokio = { version = "1.24.1", features = ["fs"], optional = true }

[dev-dependencies]
sndfile = { version = "0.1.1" }
opus = { version = "0.3.0" }
libflac-sys = { version = "0.3.0", default_features = false, features = [
  "build-flac",
] }
tokio = { version = "1.24.1", features = ["fs"] }

[feature]
tokio = ["dep:tokio"]
opus = ["dep:opus", "dep:sndfile"]
flac = ["dep:libflac-sys", "dep:sndfile"]

[[example]]
name = "opus_encode"
path = "./examples/example_opus_encode.rs"

[[example]]
name = "flac_encode"
path = "./examples/example_flac_encode.rs"

[[example]]
name = "opus_decode"
path = "./examples/example_opus_decode.rs"

[[example]]
name = "flac_decode"
path = "./examples/example_flac_decode.rs"